--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "20.1.3",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
+    "aos": "^2.3.4",
     "autoprefixer": "10.4.14",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
@@ -22,5 +23,8 @@
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4",
     "windstitch": "^0.3.0"
+  },
+  "devDependencies": {
+    "@types/aos": "^3.0.4"
   }
 }
