--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "npx prisma generate && next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^4.16.1",
     "@tanstack/react-query": "^4.29.12",
     "@types/node": "20.1.3",
     "@types/react": "18.2.6",
@@ -27,6 +28,7 @@
     "windstitch": "^0.3.0"
   },
   "devDependencies": {
-    "@types/aos": "^3.0.4"
+    "@types/aos": "^3.0.4",
+    "prisma": "^4.16.1"
   }
 }
