--- a/package.json
+++ b/package.json
@@ -23,11 +23,14 @@
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-markdown": "^8.0.7",
+    "remark-gfm": "^3.0.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4",
     "windstitch": "^0.3.0"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.9",
     "@types/aos": "^3.0.4",
     "prisma": "^4.16.1"
   }
