--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "0.27.2",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
+    "moment": "^2.29.4",
     "next": "13.4.2",
     "postcss": "8.4.23",
     "react": "18.2.0",
