--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-markdown": "^8.0.7",
+    "react-vertical-timeline-component": "^3.6.0",
     "remark-gfm": "^3.0.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4",
@@ -34,6 +35,7 @@
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
     "@types/aos": "^3.0.4",
+    "@types/react-vertical-timeline-component": "^3.3.3",
     "prisma": "^4.16.1"
   }
 }
