feat: add light/dark mode theme

--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "eslint-config-next": "13.4.2",
     "moment": "^2.29.4",
     "next": "13.4.2",
+    "next-themes": "^0.2.1",
     "nextjs-progressbar": "^0.0.16",
     "postcss": "8.4.23",
     "react": "18.2.0",
+    "react-dark-mode-toggle": "^0.2.0",
     "react-dom": "18.2.0",
     "react-markdown": "^8.0.7",
     "react-vertical-timeline-component": "^3.6.0",
