--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "remark-gfm": "^3.0.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4",
-    "windstitch": "^0.3.0"
+    "windstitch": "^0.3.0",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
