--- a/package.json
+++ b/package.json
@@ -3,34 +3,35 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "npx prisma generate && next build",
+    "dev": "next dev --turbo",
+    "build": "npx prisma generate --no-engine && next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "^4.16.1",
-    "@tanstack/react-query": "^4.29.12",
+    "@prisma/client": "^5.7.0",
+    "@prisma/extension-accelerate": "^0.6.2",
+    "@tanstack/react-query": "4.29.12",
     "@types/node": "20.1.3",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "aos": "^2.3.4",
-    "autoprefixer": "10.4.14",
+    "autoprefixer": "^10.4.16",
     "axios": "0.27.2",
     "eslint": "8.40.0",
-    "eslint-config-next": "13.4.2",
+    "eslint-config-next": "^14.0.4",
     "moment": "^2.29.4",
-    "next": "13.4.2",
+    "next": "^14.0.4",
     "next-themes": "^0.2.1",
     "nextjs-progressbar": "^0.0.16",
-    "postcss": "8.4.23",
-    "react": "18.2.0",
+    "postcss": "^8.4.32",
+    "react": "^18.2.0",
     "react-dark-mode-toggle": "^0.2.0",
-    "react-dom": "18.2.0",
-    "react-markdown": "^8.0.7",
+    "react-dom": "^18.2.0",
+    "react-markdown": "^9.0.1",
     "react-vertical-timeline-component": "^3.6.0",
-    "remark-gfm": "^3.0.1",
-    "tailwindcss": "3.3.2",
+    "remark-gfm": "^4.0.0",
+    "tailwindcss": "^3.3.6",
     "typescript": "5.0.4",
     "windstitch": "^0.3.0",
     "zustand": "^4.4.7"
@@ -39,6 +40,6 @@
     "@tailwindcss/typography": "^0.5.9",
     "@types/aos": "^3.0.4",
     "@types/react-vertical-timeline-component": "^3.3.3",
-    "prisma": "^4.16.1"
+    "prisma": "^5.7.0"
   }
 }
