--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-markdown": "^9.0.1",
     "react-vertical-timeline-component": "^3.6.0",
     "remark-gfm": "^4.0.0",
+    "sharp": "^0.33.0",
     "tailwindcss": "^3.3.6",
     "typescript": "5.0.4",
     "windstitch": "^0.3.0",
