--- a/package.json
+++ b/package.json
@@ -1,57 +1,31 @@
 {
-  "name": "veoportal",
+  "name": "jeromevillaruel",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbo",
-    "build": "npx prisma generate --no-engine && next build",
+    "dev": "next dev",
+    "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "test": "jest",
-    "test:watch": "jest --watchAll"
+    "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "^5.11.0",
-    "@prisma/extension-accelerate": "^0.6.2",
-    "@tanstack/react-query": "4.29.12",
-    "@types/node": "20.1.3",
-    "@types/react": "18.2.6",
-    "@types/react-dom": "18.2.4",
-    "aos": "^2.3.4",
-    "autoprefixer": "^10.4.16",
-    "axios": "0.27.2",
-    "eslint": "8.40.0",
-    "eslint-config-next": "^14.0.4",
-    "moment": "^2.29.4",
-    "next": "^14.0.4",
-    "next-themes": "^0.2.1",
-    "nextjs-progressbar": "^0.0.16",
-    "postcss": "^8.4.32",
-    "react": "^18.2.0",
-    "react-dark-mode-toggle": "^0.2.0",
-    "react-dom": "^18.2.0",
-    "react-markdown": "^9.0.1",
-    "react-vertical-timeline-component": "^3.6.0",
-    "remark-gfm": "^4.0.0",
-    "sharp": "^0.33.0",
-    "tailwindcss": "^3.3.6",
-    "typescript": "5.0.4",
-    "windstitch": "^0.3.0",
-    "zustand": "^4.4.7"
+    "clsx": "^2.1.1",
+    "next": "14.2.5",
+    "react": "^18",
+    "react-dom": "^18",
+    "sharp": "^0.33.5",
+    "sonner": "^1.5.0"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.9",
-    "@testing-library/jest-dom": "5.16.5",
-    "@testing-library/react": "^14.2.1",
-    "@testing-library/user-event": "^14.5.2",
-    "@types/aos": "^3.0.4",
-    "@types/react-vertical-timeline-component": "^3.3.3",
-    "eslint-plugin-jest-dom": "^5.1.0",
-    "eslint-plugin-testing-library": "^6.2.0",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "prisma": "^5.11.0",
-    "ts-jest": "^29.1.2",
-    "ts-node": "^10.9.2"
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.5",
+    "postcss": "^8",
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.6",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
