--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.1.2",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.3.29",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
